[gd_scene load_steps=16 format=2]

[ext_resource path="res://Entities/Tank.gd" type="Script" id=1]
[ext_resource path="res://Art/tank.png" type="Texture" id=2]
[ext_resource path="res://Art/barrel.png" type="Texture" id=3]
[ext_resource path="res://Sounds/Fire.wav" type="AudioStream" id=4]
[ext_resource path="res://Overlap/Hurtbox.tscn" type="PackedScene" id=5]
[ext_resource path="res://Art/fire_line.png" type="Texture" id=6]
[ext_resource path="res://Art/crosshair.png" type="Texture" id=7]
[ext_resource path="res://Sounds/Tread.wav" type="AudioStream" id=8]





[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7, 6 )

[sub_resource type="Animation" id=2]
resource_name = "Barrel_Fire"
length = 0.133
step = 0.066
tracks/0/type = "value"
tracks/0/path = NodePath("Barrel/BarrelSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.066 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( 3, 0 ), Vector2( 6, 0 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="AnimationNodeAnimation" id=4]
animation = "Move"

[sub_resource type="AnimationNodeTimeScale" id=5]

[sub_resource type="AnimationNodeBlendTree" id=6]
graph_offset = Vector2( 0, 65.5 )
nodes/Move/node = SubResource( 4 )
nodes/Move/position = Vector2( 360, 100 )
nodes/TimeScale/node = SubResource( 5 )
nodes/TimeScale/position = Vector2( 580, 100 )
nodes/output/position = Vector2( 760, 120 )
node_connections = [ "output", 0, "TimeScale", "TimeScale", 0, "Move" ]

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 7, 6 )

[node name="Tank" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 1 )

[node name="BodyCollision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.5708
texture = ExtResource( 2 )
hframes = 3

[node name="Barrel" type="Node2D" parent="."]
position = Vector2( -1, 0 )

[node name="fire_line" type="Sprite" parent="Barrel"]
position = Vector2( 1, 0 )
rotation = -1.5708
texture = ExtResource( 6 )
centered = false
offset = Vector2( -0.5, 0 )
region_enabled = true
region_rect = Rect2( 0, 0, 1, 0 )

[node name="crosshair" type="Sprite" parent="Barrel/fire_line"]
visible = false
texture = ExtResource( 7 )

[node name="BarrelSprite" type="Sprite" parent="Barrel"]
position = Vector2( 6, 0 )
rotation = 1.5708
texture = ExtResource( 3 )

[node name="RayCast2D" type="RayCast2D" parent="Barrel"]
visible = false
rotation = -1.5708
enabled = true
cast_to = Vector2( 0, 1000 )
collision_mask = 17
collide_with_areas = true

[node name="Tank" type="Node2D" parent="."]

[node name="Timer" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Barrel_Fire = SubResource( 2 )
anims/Move = SubResource( 3 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 6 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/TimeScale/scale = 1.0

[node name="ShootSoundPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="EngineSoundPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="Hurtbox" parent="." instance=ExtResource( 5 )]
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
shape = SubResource( 7 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]

[editable path="Hurtbox"]
